--- a/public/assets/languages/es.json
+++ b/public/assets/languages/es.json
@@ -19,7 +19,7 @@
 
     "description": {
         "title": "¿Quién soy?",
-        "text1": "FullStack con experiencia en el diseño de arquitecturas escalables y eficientes, desde microservicios hasta APIs de alto rendimiento. Especializado en soluciones optimizadas para Core Web Vitals, integración CI/CD y entornos de desarrollo ágiles. Aplicando tecnologías como Next.js, Flask y Gulp, en proyectos SPA y SSR, además de arquitecturas serverless para garantizar sistemas sostenibles y adaptables a cualquier carga.",
+        "text1": "FullStack Developer con experiencia en el diseño de arquitecturas escalables y eficientes, desde microservicios hasta APIs de alto rendimiento. Especializado en optimización de Core Web Vitals, integración de CI/CD y entornos de desarrollo ágiles. Aplicando tecnologías modernas como React (Vite), Node.js/Express, Prisma y PostgreSQL, aplicadas en proyectos SPA y SSR, llevando soluciones end-to-end, desde el prototipo hasta producción; además de despliegues en la nube que garantizan sistemas sostenibles y adaptables a cualquier carga.",
         "text2": "Descubre cómo cada detalle está pensado para hacer la diferencia."
     },
 
@@ -30,13 +30,12 @@
 
     "experience": {
         "title": "Experiencia",
-        "duration": "Duración:",
         "months": "meses",
-        "text1": "Creación y desarrollo de una plataforma web dinámica para Kreisel Events, diseñada para optimizar la gestión de eventos. Desde la conceptualización inicial en Adobe XD hasta la programación final con GULP, PUG, SCSS y JavaScript, cada etapa se enfocó en crear una herramienta eficiente y adaptable para facilitar la planificación y ejecución de eventos.",
-        "duration2": "Duración: 3 meses - 2023",
-        "text2": "Diseño y desarrollo del sitio web para Giriga Comida Fusión, enfocado en resaltar su propuesta de comida fusión. Desarrollado con tecnologias como GULP, PUG, SCSS y JavaScript. El resultado fue una plataforma digital que combinó funcionalidad con una experiencia de usuario excepcional, reflejando la pasión y la calidad de su oferta gastronómica.",
-        "duration3": "Duración: 3 meses - 2023",
-        "text3": "Desarrollo completo de la web para Garcinstal Multiservices LTD, una empresa de multiservicios en viviendas. La creación comenzó con un diseño inicial en Adobe XD para prototipos interactivos que guiaron al cliente y el proceso de desarrollo. Implementando a la plataforma web herramientas como GULP, PUG, SCSS y JavaScript, incluyendo la creación de un logotipo distintivo que fortaleció la identidad de la marca."
+        "text1": "Desarrollo integral de la web corporativa de Garcinstal, incluyendo la creación de un prototipo interactivo en Adobe XD para guiar el proceso. Implementación con Gulp, Pug, SCSS y JavaScript, junto con un logotipo distintivo que reforzó la identidad visual de la marca. El resultado fue un sitio funcional, responsive y alineado con los valores de la empresa.",
+        "text2": "Diseño y desarrollo de la web de Giriga Comida Fusión, con un enfoque visual para destacar su propuesta gastronómica. Construida con Gulp, Pug, SCSS y JavaScript, la plataforma combina un diseño atractivo con funcionalidad fluida, resaltando la identidad de la marca y ofreciendo una experiencia de usuario inmersiva.",
+        "text3": "Desarrollo de la página web corporativa para Kreisel Events, enfocada en la presentación de eventos y servicios. Conversión de prototipos de diseño en un sitio web responsive, implementado con PUG, SCSS, JavaScript y herramientas de maquetación. Se optimizó la navegación y se aseguró compatibilidad en distintos dispositivos, mejorando la visibilidad digital de la empresa.",
+        "text4": "Aplicación fullstack para la publicación y gestión de ofertas y demandas laborales en el sector ganadero de los Pirineos. Desarrollada con React (Vite) en frontend y Node.js/Express + Prisma/Postgres en backend, integra validaciones de datos, soporte multiidioma, notificaciones administrativas por correo y un panel de gestión con AdminJS. Incluye visualización de resultados en mapas interactivos y filtros avanzados, con despliegue en Railway para garantizar un entorno ágil y escalable.",
+        "text5": "Desarrollador Dynamics 365 en proyectos de Finance & Operations, participando en el modelado y extensión con X++ (tablas, vistas, formularios, clases y validaciones). Desarrollo de interfaces con Power Apps (Canvas) conectadas a Dataverse y automatización de procesos empresariales mediante Power Automate, asegurando integridad de datos y eficiencia en las operaciones internas."
     },
 
     "skills": {
@@ -61,6 +60,7 @@
             "ascend": "Desarrollo de un sitio web interactivo y responsivo, implementado con React JS. El diseño incluye imágenes animadas utilizando la biblioteca Gsap JS, así como pétalos animados basados en la biblioteca Sakura JS, adaptados específicamente para React. Compatible con todos los dispositivos móviles y con una interfaz agradable, elegante y visualmente atractiva."
         },
         "backend": {
+            "beep": "Desarrollo de una aplicación web fullstack para la publicación y gestión de ofertas y demandas laborales en el sector ganadero de los Pirineos. Construida con React (Vite) en el frontend y Node.js/Express con Prisma/PostgreSQL en el backend, integra validaciones, soporte multiidioma y notificaciones administrativas por correo. Incorpora un panel de administración con AdminJS para gestionar contenidos dinámicos y textos estáticos. La plataforma ofrece búsqueda avanzada, filtros por ubicación y visualización en mapas interactivos, con despliegue en Railway para un entorno ágil, seguro y escalable.",
             "flaskFinance": "Desarrollo de una aplicación web para la gestión de un portafolio de acciones utilizando Flask y una base de datos SQLite. La aplicación permite a los usuarios registrarse, iniciar sesión, comprar y vender acciones, y visualizar el historial de transacciones y el estado actual de su portafolio.",
             "birthdays": "Desarrollo de una aplicación web para almacenar y gestionar cumpleaños, implementada con Flask y una base de datos SQLite. La aplicación facilita a los usuarios la adición, visualización y eliminación de fechas de cumpleaños a través de una interfaz de formulario intuitiva.",
             "ajaxRequest": "Desarrollo de una aplicación web para la gestión de una lista de superhéroes, utilizando una base de datos MySQL y PHP. La base de datos puede ser creada e importada a través de phpMyAdmin, permitiendo una gestión eficiente de los datos de superhéroes.",
